# bin-ai-manager/models/aicall/field.go
@@ -12,12 +12,11 @@ const (
 	FieldAssistanceID   Field = "assistance_id"
 
 	FieldAIEngineModel Field = "ai_engine_model"
-	FieldAIEngineData  Field = "ai_engine_data"
 	FieldAITTSType     Field = "ai_tts_type"
 	FieldAITTSVoiceID  Field = "ai_tts_voice_id"
 	FieldAISTTType     Field = "ai_stt_type"
 
-	FieldTeamParameter Field = "team_parameter"
+	FieldParameter Field = "parameter"
 
 	FieldActiveflowID  Field = "activeflow_id"
 	FieldReferenceType Field = "reference_type"
