# bin-ai-manager/pkg/aihandler/db.go
@@ -18,7 +18,7 @@ func (h *aiHandler) dbCreate(
 	name string,
 	detail string,
 	engineModel ai.EngineModel,
-	engineData map[string]any,
+	parameter map[string]any,
 	engineKey string,
 	initPrompt string,
 	ttsType ai.TTSType,
@@ -37,7 +37,7 @@ func (h *aiHandler) dbCreate(
 		Detail: detail,
 
 		EngineModel: engineModel,
-		EngineData:  engineData,
+		Parameter:   parameter,
 		EngineKey:   engineKey,
 
 		InitPrompt: initPrompt,
@@ -105,7 +105,7 @@ func (h *aiHandler) dbUpdate(
 	name string,
 	detail string,
 	engineModel ai.EngineModel,
-	engineData map[string]any,
+	parameter map[string]any,
 	engineKey string,
 	initPrompt string,
 	ttsType ai.TTSType,
@@ -117,7 +117,7 @@ func (h *aiHandler) dbUpdate(
 		ai.FieldName:        name,
 		ai.FieldDetail:      detail,
 		ai.FieldEngineModel: engineModel,
-		ai.FieldEngineData:  engineData,
+		ai.FieldParameter:   parameter,
 		ai.FieldEngineKey:   engineKey,
 		ai.FieldInitPrompt:  initPrompt,
 		ai.FieldTTSType:     ttsType,
