# bin-api-manager/pkg/servicehandler/main.go
@@ -235,7 +235,7 @@ type ServiceHandler interface {
 		name string,
 		detail string,
 		engineModel amai.EngineModel,
-		engineData map[string]any,
+		parameter map[string]any,
 		engineKey string,
 		initPrompt string,
 		ttsType amai.TTSType,
@@ -253,7 +253,7 @@ type ServiceHandler interface {
 		name string,
 		detail string,
 		engineModel amai.EngineModel,
-		engineData map[string]any,
+		parameter map[string]any,
 		engineKey string,
 		initPrompt string,
 		ttsType amai.TTSType,
