# bin-api-manager/server/ais.go
@@ -50,7 +50,7 @@ func (h *server) PostAis(c *gin.Context) {
 		req.Name,
 		req.Detail,
 		amai.EngineModel(req.EngineModel),
-		req.EngineData,
+		req.Parameter,
 		req.EngineKey,
 		req.InitPrompt,
 		amai.TTSType(req.TtsType),
@@ -232,7 +232,7 @@ func (h *server) PutAisId(c *gin.Context, id string) {
 		req.Name,
 		req.Detail,
 		amai.EngineModel(req.EngineModel),
-		req.EngineData,
+		req.Parameter,
 		req.EngineKey,
 		req.InitPrompt,
 		amai.TTSType(req.TtsType),
